--- a/Debug/makefile
+++ b/Debug/makefile
@@ -9,7 +9,9 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include test/wave/subdir.mk
+-include test/recognition/subdir.mk
 -include src/wave/subdir.mk
+-include src/recognition/subdir.mk
 -include src/subdir.mk
 -include external/subdir.mk
 -include subdir.mk
