--- a/DebugTest/makefile
+++ b/DebugTest/makefile
@@ -9,8 +9,10 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include test/wave/subdir.mk
+-include test/recognition/subdir.mk
 -include test/subdir.mk
 -include src/wave/subdir.mk
+-include src/recognition/subdir.mk
 -include external/subdir.mk
 -include subdir.mk
 -include objects.mk
