--- a/DebugTest/makefile
+++ b/DebugTest/makefile
@@ -51,7 +51,7 @@ all: atabox-server
 atabox-server: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++ -L"/home/aldor/workspace/repos/studia/aipsc/atabox-server/libs" -o "atabox-server" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -L../libs -o "atabox-server" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
