--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/rocksdb_source"]
 	path = external/rocksdb_source
 	url = https://github.com/facebook/rocksdb.git
+[submodule "external/casablanca"]
+	path = external/casablanca
+	url = https://git01.codeplex.com/casablanca
