ready to merge to master

--- a/DebugTest/makefile
+++ b/DebugTest/makefile
@@ -12,6 +12,7 @@ RM := rm -rf
 -include test/utils/subdir.mk
 -include test/recognition/subdir.mk
 -include test/dataproviders/subdir.mk
+-include test/api/subdir.mk
 -include test/subdir.mk
 -include src/wave/subdir.mk
 -include src/utils/subdir.mk
