--- a/Debug/makefile
+++ b/Debug/makefile
@@ -9,6 +9,7 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include src/wave/subdir.mk
+-include src/runner/subdir.mk
 -include src/recognition/subdir.mk
 -include src/dataproviders/subdir.mk
 -include src/api/subdir.mk
