--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 *.exe
 *.out
 *.app
+*.d
 *atabox.db*
 external/rocksdb_source
 external/casablance
@@ -31,3 +32,5 @@ external/casablance
 /.cproject
 /.settings
 /libs
+/Debug
+/DebugTest
