--- a/DebugTest/makefile
+++ b/DebugTest/makefile
@@ -15,6 +15,8 @@ RM := rm -rf
 -include test/dataproviders/subdir.mk
 -include test/api/subdir.mk
 -include test/subdir.mk
+-include src/wave/preprocessing/subdir.mk
+-include src/wave/analysis/subdir.mk
 -include src/wave/subdir.mk
 -include src/utils/subdir.mk
 -include src/runner/subdir.mk
