--- a/DebugTest/makefile
+++ b/DebugTest/makefile
@@ -8,6 +8,7 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include test/wave/analysis/subdir.mk
 -include test/wave/subdir.mk
 -include test/utils/subdir.mk
 -include test/runner/subdir.mk
