--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 *.app
 *.d
 *atabox.db*
+*callgrind*
 external/rocksdb_source
 external/casablance
 /documentation
@@ -32,4 +33,3 @@ external/casablance
 /.cproject
 /.settings
 /libs
-/DebugTest
