--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/casablanca"]
 	path = external/casablanca
 	url = https://git.codeplex.com/casablanca
+[submodule "external/rbm"]
+	path = external/rbm
+	url = https://github.com/Aldor007/rbm-mnist
