--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -12,7 +12,7 @@ add_subdirectory(casablanca/Release)
 
 #shark
 set(BUILD_EXAMPLES OFF)
-set(ENABLE_ACCELERATE OFF)
-set(ENABLE_ATLAS OFF)
+#set(ENABLE_ACCELERATE OFF)
+#set(ENABLE_ATLAS OFF)
 include(shark/UseShark.cmake)
 #add_subdirectory(shark)
