--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -38,9 +38,9 @@ set(ATABOX_TEST_SOURCE ${ATABOX_TEST_SOURCE}
 enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS} ${ATABOX_INC})
-option(ATABOX_TESTS_COVERAGE "Build tests with coverage" ON)
+option(ATABOX_TESTS_COVERAGE "Build tests with coverage" OFF)
 if(ATABOX_TESTS_COVERAGE)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -Wall -Wextra -Wshadow -fprofile-arcs -ftest-coverage")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0  -fprofile-arcs -ftest-coverage")
     include(../CMake/CodeCoverage.cmake)
     setup_target_for_coverage_cobertura(coverage atabox_test coverage_report)
 endif()
