--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,19 +13,19 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
 
 # If no explicit compiler override and clang++ exists, prefer clang.
-#find_file(CLANGXX_EXISTS "clang++")
-#if(DEFINED ENV{CC})
-#    set(CMAKE_C_COMPILER "$ENV{CC}")
-#    message("Overriding C compiler from clang to $ENV{CC}")
-#elseif(CLANGXX_EXISTS)
-#    set(CMAKE_C_COMPILER "clang")
-#endif()
-#if(DEFINED ENV{CXX})
-#    set(CMAKE_CXX_COMPILER "$ENV{CXX}")
-#    message("Overriding CXX compiler from clang++ to $ENV{CXX}")
-#elseif(CLANGXX_EXISTS)
-#    set(CMAKE_CXX_COMPILER "clang++")
-#endif()
+find_file(CLANGXX_EXISTS "clang++")
+if(DEFINED ENV{CC})
+    set(CMAKE_C_COMPILER "$ENV{CC}")
+    message("Overriding C compiler from clang to $ENV{CC}")
+elseif(CLANGXX_EXISTS)
+    set(CMAKE_C_COMPILER "clang")
+endif()
+if(DEFINED ENV{CXX})
+    set(CMAKE_CXX_COMPILER "$ENV{CXX}")
+    message("Overriding CXX compiler from clang++ to $ENV{CXX}")
+elseif(CLANGXX_EXISTS)
+    set(CMAKE_CXX_COMPILER "clang++")
+endif()
 
 # external libs
 if(ATABOX_EXTERNAL)
