--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -14,5 +14,6 @@ add_subdirectory(casablanca/Release)
 set(BUILD_EXAMPLES OFF)
 set(ENABLE_ACCELERATE OFF)
 set(ENABLE_ATLAS OFF)
+set(ENABLE_OPENMP OFF)
 #include(shark/UseShark.cmake)
 add_subdirectory(shark)
