Added framiming for MFCC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,7 +167,7 @@ endif()
 #else()
 #    set(ATABOX_LIBS ${ATABOX_LIBS} boost_thread)
 #endif()
-add_executable(atabox_server ${ATABOX_SERVER_FILES})
+add_executable(atabox_server ${ATABOX_SERVER_FILES} src/global.h)
 target_link_libraries(atabox_server ${ATABOX_LIBS})
 #if(ATABOX_TEST)
     message("Bulding tests")
