--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -45,7 +45,9 @@ endif()
 enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS} ${ATABOX_INC})
+set(ATABOX_TESTS_COVERAGE OFF)
 option(ATABOX_TESTS_COVERAGE "Build tests with coverage" OFF)
+
 if(ATABOX_TESTS_COVERAGE)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0  -fprofile-arcs -ftest-coverage")
     include(../CMake/CodeCoverage.cmake)
@@ -55,4 +57,4 @@ endif()
     add_executable(atabox_tests ${ATABOX_TEST_SOURCE})
 set_target_properties(atabox_tests PROPERTIES COMPILE_FLAGS
     "-c -fmessage-length=0 -fprofile-arcs -ftest-coverage")
-target_link_libraries(atabox_tests  atabox ${ATABOX_LIBS} gtest gmock gcov)
+target_link_libraries(atabox_tests  atabox ${ATABOX_LIBS} gtest gmock )
