--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -16,5 +16,6 @@ set(ENABLE_ACCELERATE OFF)
 set(ENABLE_ATLAS OFF)
 set(ENABLE_OPENMP OFF)
 set(SHARK_USE_OPENMP OFF)
+set(BUILD_TESTING OFF)
 #include(shark/UseShark.cmake)
 add_subdirectory(shark)
